--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 Thumbs.db
 ehthumbs.db
 
+#files
+.gitattributes
+nb-configuration.xml
+faces-config.NavData
+
 # Folder config file
 Desktop.ini
 target
