--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -15,12 +15,14 @@ Maintenance=Maintenance
 AppName=Estamp
 logoutEfetuado=Logout efetuado com sucesso
 pagamentoEfetuado=Pagamento efetuado.
+informarSenhaAnotacao=Informar a senha para exibir as anota\u00e7\u00f5es do usu\u00e1rio
 
 registroSalvo=Registro salvo com sucesso.
 registroExcluido=Registro exclu\u00eddo com sucesso.
 clientes=Clientes
 filiais=Filiais
 servicos=Servi\u00e7os
+usuarios=Usu\u00e1rios
 produtos=Produtos
 incluirOS=Incluir OS
 descricao=Descri\u00e7\u00e3o
@@ -52,6 +54,9 @@ vencimento=Vencimento
 adParcela=Ad. Parcela
 pagar=pagar
 osEmitidas= Ordens de servi\u00e7o emitidas.
+nome=Nome
+login=Login
+senha=Senha
 
 pattern4DigitsWithThousandSeparator=###,###,##0.0000
 patternData=dd/MM/yyyy
